# decree

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  SOW.md  promote.sh  sow.md
.claude/: settings.local.json
.decree/: config.yml  processed.md
.decree/cron/: example_message.md
.decree/migrations/: 01-init-config-and-cli.spec.md  02-default-templates.spec.md  03-message-format.spec.md  04-routine-system.spec.md  05-routine-cli.spec.md  06-routine-authoring.spec.md  07-process-pipeline.spec.md  08-git-stash-hooks.spec.md  17-qa-pass.md  (+8 more)
blackbox_test/: decree  test_decree.sh
docker/: README.md  docker-compose.example.yml  entrypoint.sh  routine-sync.sh  test-routine-sync.sh
specs/: 01-init-config-and-cli.spec.md  02-default-templates.spec.md  03-embedded-ai-and-bench.spec.md  03-message-format.spec.md  04-checkpoint-system.spec.md  04-routine-system.spec.md  05-message-format-and-normalization.spec.md  05-routine-cli.spec.md  06-routine-authoring.spec.md  06-routine-system.spec.md  07-process-pipeline.spec.md  07-run-process-and-pipeline.spec.md  08-daemon-and-cron.spec.md  08-git-stash-hooks.spec.md  09-interactive-planning.spec.md  09-starter-sessions.spec.md  10-change-review-diff-and-apply.spec.md  10-lifecycle-hooks.spec.md  11-daemon-and-cron.spec.md  11-post-cleanup.spec.md  12-cli-help.spec.md  processed-spec.md
src/: checkpoint.rs  cli.rs  config.rs  cron.rs  diff_apply.rs  error.rs  hooks.rs  lib.rs  llm.rs  main.rs  message.rs  migration.rs  pipeline.rs  routine.rs  session.rs  spec.rs
tests/: integration_test.rs  integration_tests.rs
(+96 files in other folders)
